--- a/consumer-api/pom.xml
+++ b/consumer-api/pom.xml
@@ -53,6 +53,13 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>5.9.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
