--- a/producer-api/pom.xml
+++ b/producer-api/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.rabbitmq</groupId>
+			<artifactId>amqp-client</artifactId>
+			<version>5.9.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
